syntax = "proto3";

package usrmgn;

service Usrmgn {
    rpc Login (LoginRequest) returns (UsrInfoReply){}
    rpc Query(QueryRequest) returns (UsrInfoReply){}
    rpc UploadProfile (ProfileRequest) returns (UsrInfoReply) {}
    rpc ChangeNickname (NicknameRequest) returns (UsrInfoReply) {}
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message QueryRequest {
    string username = 1;
}


message ProfileRequest {
    string username = 1;
    string profile = 2;
}

message NicknameRequest {
    string username = 1;
    string nickname = 2;
}

message UsrInfoReply {
    string username = 1;
    string nickname = 2;
    string profile = 3;
}